Add scene class div

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Animated Scene</title>
   </head>
-  <body></body>
+  <body>
+    <div class="scene"></div>
+  </body>
 </html>
