Create and style sun class

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <title>Animated Scene</title>
   </head>
   <body>
-    <div class="scene"></div>
+    <div class="scene">
+      <div class="sun"></div>
+    </div>
   </body>
 </html>
