Add and style fontawesome icon

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <div class="scene">
+      <i class="fas fa-car-side"></i>
       <div class="sun"></div>
       <div class="road"></div>
     </div>
