--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
   <body>
     <div class="scene">
       <i class="fas fa-car-side"></i>
+      <i class="fab fa-cloudversify" style="--i: 1"></i>
+      <i class="fab fa-cloudversify" style="--i: 2"></i>
+      <i class="fab fa-cloudversify" style="--i: 3"></i>
+      <i class="fab fa-cloudversify" style="--i: 4"></i>
+      <i class="fab fa-cloudversify" style="--i: 5"></i>
       <div class="sun"></div>
       <div class="road"></div>
     </div>
