Add, style and animate tree icon

--- a/index.html
+++ b/index.html
@@ -14,11 +14,19 @@
   <body>
     <div class="scene">
       <i class="fas fa-car-side"></i>
+      <!-- Clouds -->
       <i class="fab fa-cloudversify" style="--i: 1"></i>
       <i class="fab fa-cloudversify" style="--i: 2"></i>
       <i class="fab fa-cloudversify" style="--i: 3"></i>
       <i class="fab fa-cloudversify" style="--i: 4"></i>
       <i class="fab fa-cloudversify" style="--i: 5"></i>
+      <!-- Trees -->
+      <i class="fas fa-tree" style="--i: 1"></i>
+      <i class="fas fa-tree" style="--i: 2"></i>
+      <i class="fas fa-tree" style="--i: 3"></i>
+      <i class="fas fa-tree" style="--i: 4"></i>
+      <i class="fas fa-tree" style="--i: 5"></i>
+      <i class="fas fa-tree" style="--i: 6"></i>
       <div class="sun"></div>
       <div class="road"></div>
     </div>
