--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
       <i class="fas fa-tree" style="--i: 4"></i>
       <i class="fas fa-tree" style="--i: 5"></i>
       <i class="fas fa-tree" style="--i: 6"></i>
+      <!-- Mountains -->
+      <i class="fas fa-mountain" style="--i: 1"></i>
+      <i class="fas fa-mountain" style="--i: 2"></i>
+      <i class="fas fa-mountain" style="--i: 3"></i>
       <div class="sun"></div>
       <div class="road"></div>
     </div>
